Update style.css to fix card display issue on mobile version

--- a/style.css
+++ b/style.css
@@ -39,11 +39,14 @@ body {
   font-size: 27px;
 }
 
-.works-cards {
+.works-cards,
+.about-me-item-list {
   display: grid;
   align-content: center;
   grid-column: 1 / 3;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: repeat(1, 1fr);
+  gap: 24px;
+  margin: 24px 24px 0;
 }
 
 .headline#headline-intro {
@@ -165,7 +168,7 @@ button:hover {
 .card {
   display: flex;
   flex-direction: column;
-  background-image: url("assets/images/img-plaholder.png");
+  background-image: url(assets/images/img-plaholder.png);
   background-size: cover;
   align-items: center;
   gap: 16px;
@@ -279,7 +282,7 @@ button:hover {
 }
 
 .about-me-item {
-  background-image: url("assets/images/img-plaholder.png");
+  background-image: url(assets/images/img-plaholder.png);
   background-size: cover;
   border: 1px solid #c1c7d0;
   border-radius: 8px;
@@ -428,11 +431,16 @@ footer {
     gap: 16px;
   }
 
+  .menu li a:hover {
+    color: #36b37f;
+    text-decoration: underline;
+  }
+
   .works-cards,
   .about-me-item-list {
     display: grid;
     grid-template-columns: auto auto auto;
-    margin: 24px 150px;
+    margin: 0 150px;
     gap: 24px;
   }
 
@@ -549,5 +557,9 @@ footer {
     margin: 68px auto 24px;
     font-weight: 800;
     font-size: 48px;
+  }
+
+  #recent-works .primary-header {
+    margin: 0 auto 52px;
   }
 }
